Bernhard's suggested reshuffle has been implemented. The bits are now in the right places but they probably don't read quite right as some of it has just been copy-pasted in.

--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -156,7 +156,6 @@
     address     = "\url{http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7064742}"
 }
 
-% Works.
 @MISC {ransac:image,
     author       = "Msm",
     title        = "Fitted line",
@@ -164,7 +163,6 @@
     note         = "{Last Accessed: 30/01/15}"
 }
 
-% Knackered.
 @MISC {ctkcmd,
     author       = "CTK",
     title        = "CTK Command Line Modules",
@@ -172,7 +170,6 @@
     note         = "{Last Accessed: 07/06/15}"
 }
 
-% Knackered.
 @MISC {mrilab,
     author       = "Fang Liu",
     title        = "MRiLab",
@@ -180,7 +177,6 @@
     note         = "{Last Accessed: 08/06/15}"
 }
 
-% Knackered
 @MISC {fetalatlas,
     author       = "Biomedical Image Analysis Group",
     institution  = "Imperial College London",
@@ -203,4 +199,11 @@
     publisher = "Rochester Institute of Technology",
     year      = "1997",
     address   = "\url{https://www.cis.rit.edu/htbooks/mri/chap-8/chap-8.htm}"
+}
+
+@MISC {cuttingupcubes,
+    author       = "Eric Baird",
+    title        = "Cutting up cubes",
+    howpublished = "\url{http://www.relativitybook.com/CoolStuff/erksolids.html}",
+    note         = "{Last Accessed: 14/06/15}"
 }
